users-service: added actuator

--- a/users-service/src/main/resources/application.properties
+++ b/users-service/src/main/resources/application.properties
@@ -9,3 +9,14 @@ spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
+
+#Actuator
+management.endpoints.web.exposure.include=health,info
+management.info.env.enabled=true
+info.app.name=users-service
+info.app.description=microservicio de registro y logueo
+info.app.version=1.0.0
+
+#Redireccionamiento de URL
+eureka.instance.statusPageUrlPath=http://localhost:8081/actuator/info
+eureka.instance.healthCheckUrlPath=http://localhost:8081/actuator/health
