config-server: update

--- a/users-service/src/main/resources/application.properties
+++ b/users-service/src/main/resources/application.properties
@@ -20,3 +20,13 @@ info.app.version=1.0.0
 #Redireccionamiento de URL
 eureka.instance.statusPageUrlPath=http://localhost:8081/actuator/info
 eureka.instance.healthCheckUrlPath=http://localhost:8081/actuator/health
+
+eureka.instance.hostname=localhost
+
+#Config Server
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=config-server
+spring.config.import=optional:configserver:
+
+
+#dependencias necesarias: eureka  discovery client, config client, spring web
