--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=config-server
 server.port=8888
 spring.cloud.config.server.git.uri=http://github.com/PabloNMerino/digitalMoneyHouse-config-server.git
+
+eureka.instance.hostname=localhost
