--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,3 +1,40 @@
 spring:
   application:
     name: gateway
+  config:
+    import: "optional:configserver:"
+  cloud:
+    config:
+      discovery:
+        serviceId: config-server
+        enabled: true
+    gateway:
+      routes:
+        - id: users-service
+          uri: http://localhost:8081
+          predicates:
+            - Path=/users
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info
+  info:
+    env:
+      enabled: true
+info:
+  app:
+    name: Gateway
+    description: API gateway
+    version: 1.0.0
+
+eureka:
+  instance:
+    hostname: localhost
+    statusPageUrlPath: http://localhost:8084/actuator/info
+    healthCheckUrlPath: http://localhost:8084/actuator/info
+
+
+server:
+  port: 8084
