--- a/users-service/pom.xml
+++ b/users-service/pom.xml
@@ -67,6 +67,12 @@
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
 
+		<dependency>
+			<groupId>org.keycloak</groupId>
+			<artifactId>keycloak-admin-client</artifactId>
+			<version>23.0.6</version>
+		</dependency>
+
     </dependencies>
 	<dependencyManagement>
 		<dependencies>
