--- a/accounts-service/src/main/resources/application.properties
+++ b/accounts-service/src/main/resources/application.properties
@@ -1,25 +1,9 @@
 spring.application.name: accounts-service
-
-# MySQL Database Configuration
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/accounts-service-db
-spring.datasource.username=root
-spring.datasource.password=admin
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql= true
-spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
-
 server.port: 8082
 
-#Actuator
-management.endpoints.web.exposure.include=health,info
-management.info.env.enabled=true
-info.app.name=accounts-service
-info.app.description=microservicio de administracion de billetera virtual
-info.app.version=1.0.0
+#Config Server
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=config-server
+spring.config.import=optional:configserver:
 
-#Redireccionamiento de URL
-eureka.instance.statusPageUrlPath=http://localhost:8082/actuator/info
-eureka.instance.healthCheckUrlPath=http://localhost:8082/actuator/health
-
-eureka.instance.hostname=localhost
+eureka.instance.hostname: localhost
