--- a/accounts-service/pom.xml
+++ b/accounts-service/pom.xml
@@ -86,6 +86,11 @@
 			<groupId>jakarta.validation</groupId>
 			<artifactId>jakarta.validation-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.github.openfeign</groupId>
+			<artifactId>feign-core</artifactId>
+			<version>11.9.1</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
