gateway: added account path

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -15,6 +15,12 @@ spring:
           predicates:
             - Path=/user/**
 
+        - id: accounts-service
+          uri: lb://accounts-service
+          predicates:
+            - Path=/account/**
+
+
 management:
   endpoints:
     web:
