--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -20,6 +20,6 @@ spring.cloud.config.discovery.serviceId=config-server
 spring.config.import=optional:configserver:
 
 
-spring.cloud.gateway.routes[0].id=users-service
-spring.cloud.gateway.routes[0].uri=http://localhost:8081
-spring.cloud.gateway.routes[0].predicates[0]=Path=/user/**
+#spring.cloud.gateway.routes[0].id=users-service
+#spring.cloud.gateway.routes[0].uri=http://localhost:8081
+#spring.cloud.gateway.routes[0].predicates[0]=Path=/user/**
