--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -10,26 +10,25 @@ spring:
         enabled: true
     gateway:
       globalcors:
-          add-to-simple-url-handler-mapping: true
-          cors-configurations:
-            '[/**]':
-              #allowedOrigins: "http://localhost:5173"
-              #allowedHeaders: '*'
-              allowedMethods:
-                - GET
-                - POST
-                - PUT
-                - PATCH
-                - DELETE
-                - OPTIONS
-              allowedHeaders:
-                - Origin
-                - X-Requested-With
-                - Content-Type
-                - Accept
-                - Authorization
-              allowCredentials: true
-              maxAge: 3600
+        cors-configurations:
+          '[/**]':
+            allowedOrigins: "http://localhost:5173"
+            #allowedHeaders: '*'
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - PATCH
+              - DELETE
+              - OPTIONS
+            allowedHeaders:
+              - Origin
+              - X-Requested-With
+              - Content-Type
+              - Accept
+              - Authorization
+            allowCredentials: true
+            maxAge: 3600
       routes:
         - id: users-service
           uri: lb://users-service
@@ -39,15 +38,6 @@ spring:
           uri: lb://accounts-service
           predicates:
             - Path=/account/**
-          metadata:
-            cors:
-              allowedOrigins: '*'
-              allowedMethods:
-                - GET
-                - POST
-              allowedHeaders: '*'
-              maxAge: 30
-
 
 management:
   endpoints:
