create dockerfile and jar

--- a/transactions-service/pom.xml
+++ b/transactions-service/pom.xml
@@ -72,6 +72,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>transactions-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
