--- a/accounts-service/pom.xml
+++ b/accounts-service/pom.xml
@@ -105,6 +105,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>accounts-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
