--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -47,6 +47,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>eureka-server</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
