--- a/users-service/pom.xml
+++ b/users-service/pom.xml
@@ -108,6 +108,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>users-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
