--- a/users-service/src/main/resources/application.properties
+++ b/users-service/src/main/resources/application.properties
@@ -20,7 +20,7 @@ info.app.version=1.0.0
 #Redireccionamiento de URL
 eureka.instance.statusPageUrlPath=http://localhost:8081/actuator/info
 eureka.instance.healthCheckUrlPath=http://localhost:8081/actuator/health
-
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka/
 eureka.instance.hostname=localhost
 
 #Config Server
