--- a/accounts-service/src/main/resources/application.properties
+++ b/accounts-service/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.cloud.config.discovery.serviceId=config-server
 spring.config.import=optional:configserver:
 
 eureka.instance.hostname: localhost
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka/
