--- a/accounts-service/src/main/resources/application.properties
+++ b/accounts-service/src/main/resources/application.properties
@@ -2,8 +2,9 @@ spring.application.name: accounts-service
 server.port: 8082
 
 #Config Server
-spring.cloud.config.discovery.enabled=true
-spring.cloud.config.discovery.serviceId=config-server
+spring.cloud.config.uri=http://config-server:8888/
+#spring.cloud.config.discovery.enabled=true
+#spring.cloud.config.discovery.serviceId=config-server
 spring.config.import=optional:configserver:
 
 eureka.instance.hostname: localhost
