--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -3,4 +3,4 @@ server.port=8888
 spring.cloud.config.server.git.uri=http://github.com/PabloNMerino/digitalMoneyHouse-config-server.git
 
 eureka.instance.hostname=localhost
-eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
