--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -5,9 +5,10 @@ spring:
     import: "optional:configserver:"
   cloud:
     config:
-      discovery:
-        serviceId: config-server
-        enabled: true
+      uri: http://config-server:8888/
+      #discovery:
+        #serviceId: config-server
+        #enabled: true
     gateway:
       globalcors:
         cors-configurations:
@@ -31,11 +32,13 @@ spring:
             maxAge: 3600
       routes:
         - id: users-service
-          uri: lb://users-service
+          uri: http://users-service:8081
+          #uri: lb://users-service
           predicates:
             - Path=/user/**
         - id: accounts-service
-          uri: lb://accounts-service
+          uri: http://accounts-service:8082
+          #uri: lb://accounts-service
           predicates:
             - Path=/account/**
 
