--- a/users-service/src/main/resources/application.properties
+++ b/users-service/src/main/resources/application.properties
@@ -3,11 +3,13 @@ server.port=8081
 
 # MySQL Database Configuration
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/user-service-db
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/user-service-db
+spring.datasource.url=jdbc:mysql://mysql:3306/dmhdatabase?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
 
 #Actuator
@@ -24,8 +26,9 @@ eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka/
 eureka.instance.hostname=localhost
 
 #Config Server
-spring.cloud.config.discovery.enabled=true
-spring.cloud.config.discovery.serviceId=config-server
+spring.cloud.config.uri=http://config-server:8888/
+#spring.cloud.config.discovery.enabled=true
+#spring.cloud.config.discovery.serviceId=config-server
 spring.config.import=optional:configserver:
 
 
